Added tailwind css

--- a/webui/index.html
+++ b/webui/index.html
@@ -2,8 +2,19 @@
 <html>
     <head>
       <meta charset="utf-8" />
-      <link data-trunk rel="css" href="bootstrap.css" />
       <title>Web UI Trendfollowing</title>
+      <script src="https://cdn.tailwindcss.com"></script>
+      <script>
+	  tailwind.config = {
+	      theme: {
+		  extend: {
+		      colors: {
+			  clifford: '#da373d',
+		      }
+		  }
+	      }
+	  }
+      </script>
     </head>
     <body>
     </body>
